Added a amoge burst picture.